            - Fixed bug that caused embedded subtitles to be displayed instead of external (thanks, SubJunk)
            - Fixed handling of per-renderer aspect-ratio settings (thanks, ExSport)
        - tsMuxeR:
            - Fixed 24-bit FLAC support with tsMuxeR (thanks, SubJunk)
            - Fix bug that disabled tsMuxeR for compatible files
        - VLC:
            - Fix looping playback
        - Misc:
            - New engine: VLCWebVideo ("vlcwebvideo")
            - Clean up engine names

    Renderers:
        - PS3: TV series with sound problems after "previously on" block should now play normally with Keep AC-3 track option enabled (thanks, SubJunk)

    Language updates:
        - Updated Dutch translation (thanks, leroy!)

    Misc:
        - Fix issue with VirtualBox and PMS launchers (thanks, thepadawan42)
        - Added support for M4A files encoded with Fraunhofer AAC
        - Upgrade Thumbnailator to 0.4.4 to fix out-of-memory errors (thanks, coobird)

1.81.0 - 2013-04-21

    Engines:
        FFmpeg:
            - Add/fix audio channel options
            - Build script: add HTTPS support

    WEB.conf:
        - Add support for the file:// protocol
        - Match protocols (e.g. mms://...) before extensions (e.g. http://example.com/foo.mms)

    Misc:
        - Media Parser v1: fix audio channel parsing
        - Fix for "Can't assign requested address" bug after update to Java 1.6.0_45 on Mac OSX

1.80.0 - 2013-04-06

    Regressions:
        - Re-allow all transcode engines to be disabled

    PMS.conf:
        - FFmpeg has been renamed ffmpeg_video_custom_options and now defaults to null

    Renderers:
        - Document TranscodeVideo and TranscodeAudio profiles
        - Panasonic TVs: Add "exclusive" option to SeekByTime to work around a transcoding issue
        - PS3: Restore seek-by-time support for streaming
        - Android: allowing chunked transfer